10. Aplique elementos HTML de acordo com o sentido e propósito de cada um deles

--- a/index.html
+++ b/index.html
@@ -19,48 +19,60 @@
   </header>
 
   <main>
-    <img id="minha_foto" src="images/minha-foto.jpeg" alt="Foto do Jonatas">
-    <a href="https://jonataspassos96.github.io/" target="_blank">Jonatas Passos</a>
 
-    <h2 id="lista_licoes">Listas:</h2>
+    <div id="container_image">
+      <img id="minha_foto" src="images/minha-foto.jpeg" alt="Foto do Jonatas">
+    </div>
 
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Bash</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Internet</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Zoom</li>
-        <li>Slack</li>
-        <li>Autoconhecimento</li>
-    </ol>
+    <section id="container_licoes">
+      <div id="container_ol">
+        <h2>Lições Aprendidas:</h2>
+        <ol id="licoes_aprendidas">
+          <li>Unix</li>
+          <li>Bash</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Internet</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Zoom</li>
+          <li>Slack</li>
+          <li>Autoconhecimento</li>
+        </ol>
+      </div>
 
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>CSS Responsive</li>
-        <li>SQL</li>
-        <li>MongoDB</li>
-        <li>Python</li>
-        <li>Redes</li>
-        <li>ES6</li>
-        <li>DOM</li>
-    </ul>
+      <div id="container_ul">
+        <h2>Lições a Aprender:</h2>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Node</li>
+          <li>CSS Responsive</li>
+          <li>SQL</li>
+          <li>MongoDB</li>
+          <li>Python</li>
+          <li>Redes</li>
+          <li>ES6</li>
+          <li>DOM</li>
+        </ul>
+      </div>
+    </section>
 
-    <article>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit possimus accusantium earum quibusdam ea culpa eligendi commodi natus excepturi adipisci ipsum saepe, suscipit delectus ab, porro harum voluptatem? Laudantium, ratione.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime, ex mollitia aliquid vero officia sint facere nobis deserunt nam modi minima ea labore. Autem odio odit aliquam culpa quisquam.
-    </article>
+    <section id="conteudo">
+        <article id="conteudo_1">
+            No dia 9 de agosto de 2021, iniciei minha jornada na Trybe. Aprendi sobre o Unix que é composto pelo kernel e Shell e a interagir com este. Aprendi Git e GitHub, ambos são repositórios onde seram armazenados seus códigos, um localmente na sua máquina e o outro de forma remota em nuvem, e outras coisas.
+        </article>
 
-    <section>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum voluptate commodi voluptatem eveniet dolorum asperiores dolor expedita eaque sit vel ad adipisci enim praesentium velit quos, soluta voluptatibus officiis deleniti.
+        <article id="conteudo_2">
+            Também aprendi HTML e CSS, descobri que através deles é possivel criar páginas na web e estilizadas de acordo com a minha criatividade. Outras ferramentas interessantes. Gostei bastante de aprender todas essas tecnologias.
+        </article>
 
-        <aside>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum voluptate commodi voluptatem eveniet dolorum asperiores dolor expedita eaque sit vel ad adipisci enim praesentium velit quos, soluta voluptatibus officiis deleniti.
+        <aside id="conteudo_a_parte">
+            A trybe é uma excelente escola de programação que vai te ajudar a se tornar um Desenvolver Web, acesso o <a href="https://www.betrybe.com/?utm_medium=cpc&utm_source=google&utm_campaign=Brand&utm_content=ad03_din_h&gclid=CjwKCAjw1JeJBhB9EiwAV612y5sX75aD0eMPptZPckrufbFSwiuYWT_xfiFkiID-MbosAO8IoyZlARoCoT0QAvD_BwE" target="_blank">Link</a> e descubra mais.<br><br>
 
+            Meu portfólio: <a href="https://jonataspassos96.github.io/" target="_blank">GitHub</a><br><br>
+
+            Meu perfil: <a href="https://www.linkedin.com/in/jonatas-passos-a07333186/" target="_blank">LinkedIn</a>
         </aside>
     </section>
   </main>
