Concluido estilização de lista

--- a/index.html
+++ b/index.html
@@ -33,30 +33,30 @@
                 <div class="list__box">
                     <h2>Lições Aprendidas</h2>
                     <ol id="licoes_aprendidas">
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
+                        <li class="list_item">Fundamentos do Desenvolvimento Web</li>
+                        <li class="list_item">Unix & Shell</li>
+                        <li class="list_item">Unix & Bash</li>
+                        <li class="list_item">Git & Github</li>
+                        <li class="list_item">Internet</li>
+                        <li class="list_item">HTML & CSS</li>
+                        <li class="list_item">TAG's HTML</li>
+                        <li class="list_item">HTML Semântico</li>
+                        <li class="list_item">Seletores e Posicionamento com CSS</li>
+                        <li class="list_item">Soft Skill - Inteligência Emocional</li>
                     </ol>
                 </div>
-                <div class="listas__box">
+                <div class="list__box">
                     <h2>Lições a Aprender</h2>
                     <ul id="licoes_a_aprender">
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
-                        <li class="list_item">...</li>
+                        <li class="list_item">Introdução a JavaScript</li>
+                        <li class="list_item">DOM e Seletores com JavaScript</li>
+                        <li class="list_item">Introdução a JavaScript ES6</li>
+                        <li class="list_item">Primeiros passos no Jest</li>
+                        <li class="list_item">Introdução à React</li>
+                        <li class="list_item">Metodologias Ágeis</li>
+                        <li class="list_item">Sof Skill - Comunicação</li>
+                        <li class="list_item">Desenvolvimento Back-end</li>
+                        <li class="list_item">Ciência da Computação</li>
                     </ul>
                 </div>
             </section>
