11. Teste a semântica da sua página está aprovada pelo site CodeSniffer

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
       </div>
     </section>
 
-    <section id="conteudo">
-        <article id="conteudo_1">
-            No dia 9 de agosto de 2021, iniciei minha jornada na Trybe. Aprendi sobre o Unix que é composto pelo kernel e Shell e a interagir com este. Aprendi Git e GitHub, ambos são repositórios onde seram armazenados seus códigos, um localmente na sua máquina e o outro de forma remota em nuvem, e outras coisas.
-        </article>
+    <article class="lado-esquerdo">
+        No dia 9 de agosto de 2021, iniciei minha jornada na Trybe. Aprendi sobre o Unix que é composto pelo kernel e Shell e a interagir com este. Aprendi Git e GitHub, ambos são repositórios onde seram armazenados seus códigos, um localmente na sua máquina e o outro de forma remota em nuvem, e outras coisas.
+    </article>
 
-        <article id="conteudo_2">
+    <section class="lado-direito">
+        <div id="conteudo_lado_direito">
             Também aprendi HTML e CSS, descobri que através deles é possivel criar páginas na web e estilizadas de acordo com a minha criatividade. Outras ferramentas interessantes. Gostei bastante de aprender todas essas tecnologias.
-        </article>
+        </div>
 
         <aside id="conteudo_a_parte">
             A trybe é uma excelente escola de programação que vai te ajudar a se tornar um Desenvolver Web, acesso o <a href="https://www.betrybe.com/?utm_medium=cpc&utm_source=google&utm_campaign=Brand&utm_content=ad03_din_h&gclid=CjwKCAjw1JeJBhB9EiwAV612y5sX75aD0eMPptZPckrufbFSwiuYWT_xfiFkiID-MbosAO8IoyZlARoCoT0QAvD_BwE" target="_blank">Link</a> e descubra mais.<br><br>
