revisão de item da lista lições a aprender

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <li class="list_item">Introdução à React</li>
                         <li class="list_item">Metodologias Ágeis</li>
                         <li class="list_item">Sof Skill - Comunicação</li>
+                        <li class="list_item">Sof Skill - Liderança</li>
                         <li class="list_item">Desenvolvimento Back-end</li>
                         <li class="list_item">Ciência da Computação</li>
                     </ul>
