--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 	</section>
 	
-	<div class="container-aprendizado">
+	<div class="container article-container">
 		<article id="aprendizado" class="lado-esquerdo">
 			<section class="aprendizado">
 				<h2>Aprendizado na Trybe</h2>
@@ -102,7 +102,9 @@
 	
 
 	<footer id="rodape">
-		<p>Conteúdo compilado por Victorhbm, 2021</p>
+		<div class="container">
+			<p>Conteúdo compilado por Victorhbm, 2021</p>
+		</div>
 	</footer>
 
 </body>
