--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <li>Respeitar o seu tempo de aprendizagem.</li>
                             <li>Aprender a pescar, ou seja, buscar a metodologia ativa de aprendizado.</li>
                             <li>Que sozinhos podemos ir mais rápidos, porém juntos vamos mais longe.</li>
-                            <li>Ensinar é muito prazeroso e é a chave so sucesso.</li>
+                            <li>Ensinar é muito prazeroso e é a chave do sucesso.</li>
                             <li>Aprender a importância do autoconhecimento para gerenciar sua carreira.</li>
                             <li>Disciplina e foco são aracterísticas que podem ser aprimoradas.</li>
                             <li>Buscar conhecimento contínuo é um caminho sem volta.</li>
