conclusão da pagina

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <header id="cabecalho" class="estilo-cabecalho">
         <h1 id="titulo">Conteúdos Aprendidos na Trybe</h1>
     </header>
-    
+
+    <div class="foto-perfil">
     <img id="minha_foto" src="500kbminhafoto2.jpg" alt="foto de perfil com fundo de montanhas" width="300px">
+    </div>
 
     <div class="Nome">
         <h2>Thiago José</h2>
@@ -23,6 +25,22 @@
             <a href="https://github.com/TjAndrade99" target="_blank"> <img src="inconProjeto/githubincon.png" alt="incone acesso ao perfil github" width="80px"></a>
             <a href="https://www.linkedin.com/in/thiagojos%C3%A9andrade/" target="_blank"> <img src="inconProjeto/linkedinicon.png" alt="incone acesso ao perfil linkedin" width="90px"></a>
     </nav>
+
+    <table border=2 class="tabela">
+        <tr>
+            <th>Modulo 01</th>
+            <th>Modulo 02</th>
+            <th>Modulo 03</th>
+            <th>Modulo 04</th>
+        </tr>
+        <tr>
+            <td>Fundamentos do Desenvolvimento Web</td>
+            <td>Desenvolvimento Front-end</td>
+            <td>Desenvolvimento Back-and</td>
+            <td>Ciência da Computação</td>
+        </tr>
+    </table>
+
     <div class="licoes">
     <section class="lista-esquerda">
         <h3>Lições Aprendidas</h3>
@@ -55,6 +73,7 @@
             <li>Introdução - Deploy</li>
         </ul>
     </section>
+    
     </div>
     <article class="lado-esquerdo">
         <h3>Artigo Aprendizado</h3>
@@ -73,11 +92,15 @@
             dado com firmeza  e inteligencia, para que não caia durante cada passo.</p>
     </aside>
 
-    <footer id="rodape">
+ 
+    <div class="link-ajuda">
+        <h3>Link de Ajuda</h3>
+        <p> link de ajuda, curso gratuito para <a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs&list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n&ab_channel=CursoemV%C3%ADdeo" target="_blank">HTML5 & CSS</a> com o Mestre Jedi Guanabara.</p>
+    </div>
 
-        <p> Feito por Thiago José, Turma 16 - Tribo B. 2021</p>
+    <footer id="rodape">
+         <p> Feito por Thiago José, Turma 16 - Tribo B. 2021</p>
     </footer>
-    <p> link de ajuda, curso gratuito para <a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs&list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n&ab_channel=CursoemV%C3%ADdeo" target="_blank">HTML5 & CSS</a> com o Mestre Jedi Guanabara.</p>
 
 </body>
 </html> 
