--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 <body>
     <!--barra superior/ -->
     <header>
-        <h1>Conteudos Adquiridos.
-            <img src="" alt="">;
+        <div>
+            <h1>
+                Conteudos Adquiridos. <br>
+                <!--foguete/ -->
+                <img class="imgtitolo" src="imagens/download (1).jpeg" alt="">
 
-        </h1>
+            </h1>
+        </div>    
     </header>
     <nav>
-        <h4>
+        <a href="">
             <li></li>
-        </h4>
+        </a>
     </nav>
 </body>
 </html>
