--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <li>Disciplina e foco são aracterísticas que podem ser aprimoradas.</li>
                             <li>Buscar conhecimento contínuo é um caminho sem volta.</li>
                             <li>Pedir ajuda é libertador após se empenhar na busca por respostas, mas mesmo assim não encontrar.</li>
-                            <li>Melhorar a capacidade de escrita, especialmente a ecessidade de síntase.</li>
+                            <li>Melhorar a capacidade de escrita, especialmente a necessidade de síntase.</li>
                             <li>Ser grato por cada pequena conquista.</li>
                         </ol>
                     </nav>
