--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <figure>
                         <img id="minha_foto" class="alinha-foto" src="foto.jpg" alt="Foto da programadora.">
                     </figure>
-                    <p class="limpa">"Quem diria que em apenas duas semanas fossem acontecer tantas transformações na minha vida. Se alguém me falasse que ao entrara na Trybe eu reconheceria a missão e a visão de forma tão acolhedora, e que essa ação me traria paz. As Hards skllis são meu novo desafio diário, mas hoje posso dizer que começa a fazer sentindo algumas questões de Git e Github, HTML e CSS. É uma grande vitória!"</a></p>
+                    <p class="limpa">"Quem diria que em apenas duas semanas fossem acontecer tantas transformações na minha vida. Se alguém me falasse que ao entrar na Trybe eu reconheceria a missão e a visão de forma tão acolhedora, e que essa ação me traria paz. As Hard skills são meu novo desafio diário, mas hoje posso dizer que começa a fazer sentindo algumas questões de Git e Github, HTML e CSS. É uma grande vitória!"</a></p>
                 </article>
                 
                 <aside class="limpa">
