--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 
                 <aside class="limpa">
                     <h2>Aprendizados</h2>
-                    <p>As Hards skllis são meu novo desafio diário, mas hoje posso dizer que começa a fazer sentindo algumas questões de Git e Github, HTML e CSS. É uma grande vitória! 
+                    <p>As Hard skills são meu novo desafio diário, mas hoje posso dizer que começa a fazer sentindo algumas questões de Git e Github, HTML e CSS. É uma grande vitória! 
                     </p>
                 </aside>
             </main>
