Criado artigo e notas do artigo

--- a/index.html
+++ b/index.html
@@ -66,14 +66,17 @@
                 <section id="artigo_meu_aprendizado">
                     <div id="artigo_box">
                         <h2>Meu Aprendizado</h2>
-                        <p class="text">...</p>
+                        <p class="text">Diferente dos demais cursos de programação a trybe me trouxe uma experiência diferente do que jamais presentiei antes. Na trybe meu aprendizado esta me rendendo um conhecimento muito melhor e mais satisfatório do que em outras
+                            experiências que ja tive anteriormente.<br/> Iniciei os meus estudos na trybe com um certo nivel básico de experiência e logo imaginei que não iria aprender conteúdos novos no inicio do curso, porém foi totalmente diferente
+                            como imaiginava, além de aprender novos conteúdos pode ter a oportunidade de aprimorar ainda mais meus conhecimentos em HTML e CSS.</p>
                     </div>
                 </section>
                 <aside id="notas">
                     <div id="notas_do_artigo">
-                        <h2>Meu Aprendizado</h2>
-                        <h3>A estrada até aqui</h3>
-                        <P>...</P>
+                        <h2>Notas de Aprendizado</h2>
+                        <P>Iniciei meus estudos na trybe com o objetivo principal de desenvolver minhas habilidades tecnicas em programação web, mas pode perceber logo de inicio que na trybe estou muito além disso, contribuindo também com meu desenvolvimento
+                            pessoal.
+                        </P>
                     </div>
                 </aside>
             </article>
@@ -84,19 +87,19 @@
         <nav>
             <ul>
                 <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-github.png" alt="Github">
-                    <a href="https://github.com/lbcamargo94">Github</a>
+                    <a href="https://github.com/lbcamargo94" target="_blank">Github</a>
                 </li>
                 <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-instagram.png" alt="Instagram">
-                    <a href="https://www.instagram.com/l.b.camargo/">Instagram</a>
+                    <a href="https://www.instagram.com/l.b.camargo/" target="_blank">Instagram</a>
                 </li>
                 <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-facebook.png" alt="Facebook">
-                    <a href="https://www.facebook.com/lucas.bueno.5074644">Facebook</a>
+                    <a href="https://www.facebook.com/lucas.bueno.5074644" target="_blank">Facebook</a>
                 </li>
                 <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-linkedin_.png" alt="Linkedin">
-                    <a href="https://www.linkedin.com/in/lucas-camargo-80a015190/">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/lucas-camargo-80a015190/" target="_blank">Linkedin</a>
                 </li>
                 <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/gmail_.png" alt="G-mail">
-                    <a href="https://mail.google.com/mail/u/0/#inbox">G-mail</a>
+                    <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">G-mail</a>
                 </li>
             </ul>
         </nav>
