--- a/index.html
+++ b/index.html
@@ -58,23 +58,28 @@
       </div>
     </section>
 
-    <article class="lado-esquerdo">
-        No dia 9 de agosto de 2021, iniciei minha jornada na Trybe. Aprendi sobre o Unix que é composto pelo kernel e Shell e a interagir com este. Aprendi Git e GitHub, ambos são repositórios onde seram armazenados seus códigos, um localmente na sua máquina e o outro de forma remota em nuvem, e outras coisas.
-    </article>
+    <div id="container_conteudos">
+      <article class="lado-esquerdo">
+        <h4>Meu aprendizado</h4>
+        No dia 9 de agosto de 2021, iniciei minha jornada na Trybe. Aprendi sobre o Unix que é composto pelo kernel e Shell e a interagir com este; sobre Git e GitHub, ambos são repositórios onde seram armazenados seus códigos, um localmente na sua máquina e o outro de forma remota em nuvem; sobre HTML e CSS, descobri que através deles é possivel criar páginas na web e estilizadas de acordo com a minha criatividade. Outras ferramentas que aprendi foram o Zoom e o Slack que servem para a comunicação entre a equipe.
+      </article>
 
-    <section class="lado-direito">
+      <section class="lado-direito">
         <div id="conteudo_lado_direito">
-            Também aprendi HTML e CSS, descobri que através deles é possivel criar páginas na web e estilizadas de acordo com a minha criatividade. Outras ferramentas interessantes. Gostei bastante de aprender todas essas tecnologias.
+          <h4>Como foi?</h4>
+          Tive que dedicar bastante tempo para conseguir aprender e fixar todo o conteúdo passado pelo curso, além das seis horas de duração do curso da Trybe, dedico mais quatro horas para revisar e praticar todo o conteúdo. No começo foi difícil me adaptar a nossa rotina, mas como eu tinha me decidido que era isso que eu queria, com foco, consigo hoje estudar tranquilamente dez horas diarias.<br><br>
         </div>
 
         <aside id="conteudo_a_parte">
+            <h4>Sobre:</h4>
             A trybe é uma excelente escola de programação que vai te ajudar a se tornar um Desenvolver Web, acesso o <a href="https://www.betrybe.com/?utm_medium=cpc&utm_source=google&utm_campaign=Brand&utm_content=ad03_din_h&gclid=CjwKCAjw1JeJBhB9EiwAV612y5sX75aD0eMPptZPckrufbFSwiuYWT_xfiFkiID-MbosAO8IoyZlARoCoT0QAvD_BwE" target="_blank">Link</a> e descubra mais.<br><br>
 
             Meu portfólio: <a href="https://jonataspassos96.github.io/" target="_blank">GitHub</a><br><br>
 
             Meu perfil: <a href="https://www.linkedin.com/in/jonatas-passos-a07333186/" target="_blank">LinkedIn</a>
         </aside>
-    </section>
+      </section>
+    </div>
   </main>
 
   <footer id="rodape">Todos os direitos reservados, Jonatas</footer>
