Concluido estilização da área de artigo e notas do artigo

--- a/index.html
+++ b/index.html
@@ -65,18 +65,19 @@
             <article id="artigo">
                 <section id="artigo_meu_aprendizado">
                     <div id="artigo_box">
-                        <h2>Meu Aprendizado</h2>
+                        <h2 id="artigo_titulo">Meu Aprendizado</h2>
                         <p class="text">Diferente dos demais cursos de programação a trybe me trouxe uma experiência diferente do que jamais presentiei antes. Na trybe meu aprendizado esta me rendendo um conhecimento muito melhor e mais satisfatório do que em outras
-                            experiências que ja tive anteriormente.<br/> Iniciei os meus estudos na trybe com um certo nivel básico de experiência e logo imaginei que não iria aprender conteúdos novos no inicio do curso, porém foi totalmente diferente
-                            como imaiginava, além de aprender novos conteúdos pode ter a oportunidade de aprimorar ainda mais meus conhecimentos em HTML e CSS.</p>
+                            experiências que ja tive anteriormente.</p>
+                        <p class="text">Iniciei meus estudos na trybe com um certo nivel básico de experiência e logo imaginei que não iria aprender conteúdos novos no inicio do curso, porém foi totalmente diferente como imaiginava, além de aprender novos conteúdos pode
+                            ter a oportunidade de aprimorar ainda mais meus conhecimentos em HTML e CSS.</p>
                     </div>
                 </section>
                 <aside id="notas">
                     <div id="notas_do_artigo">
-                        <h2>Notas de Aprendizado</h2>
-                        <P>Iniciei meus estudos na trybe com o objetivo principal de desenvolver minhas habilidades tecnicas em programação web, mas pode perceber logo de inicio que na trybe estou muito além disso, contribuindo também com meu desenvolvimento
+                        <h2 id="notas_titulo">Notas de Aprendizado</h2>
+                        <p class="text">Iniciei meus estudos na trybe com o objetivo principal de desenvolver minhas habilidades tecnicas em programação web, mas pode perceber logo de inicio que na trybe estou muito além disso, contribuindo também com meu desenvolvimento
                             pessoal.
-                        </P>
+                        </p>
                     </div>
                 </aside>
             </article>
