Ajuste da formatação dos textos. Requisito bônus 14 OK.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="titulo">Lessons Learned by Nayara</h1>
     </header>
     <main>
-        <section>
+        <section class="menu">
             <img src="profile-picture.jpeg" alt="Nayara sorrindo discretamente." id="minha_foto" width="250px"> 
             <h2>Nayara Vasconcelos</h2>
             <p>Pessoa estudante na Trybe</p>
@@ -24,8 +24,7 @@
         </section>
         <article>
             <h2>Primeros 15 dias na Trybe</h2>
-            <p>As duas primeiras semanas de estudo na <a href="http://www.betrybe.com" target="_blank">Trybe</a> foram muito intensas: Bastante informação nova, muitos exercícios práticos, desafios e realizações.<br>
-            A Tribo B da Turma 16 é super proativa e colaborativa e a equipe de facilitação é maravilhosa. Só gente bacana!</p>
+            <p>As duas primeiras semanas de estudo na <a href="http://www.betrybe.com" target="_blank">Trybe</a> foram muito intensas: Bastante informação nova, muitos exercícios práticos, desafios e realizações. A Tribo B da Turma 16 é super proativa e colaborativa e a equipe de facilitação é maravilhosa. Só gente bacana!</p>
             <p> Estou adorando o processo, bem feliz com as primeiras conquistas e super empolgada com o caminho a seguir. #vqv #goTrybe</p>
         </article>
         <section>
