--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
     </main>
     <!-- Rodapé -->
     <footer id="rodape">
-        <nav>
+        <nav id="rodape__nav">
             <ul>
-                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-github.png" alt="Github">
+                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-github.png" alt="Github">
                     <a href="https://github.com/lbcamargo94" target="_blank">Github</a>
                 </li>
-                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-instagram.png" alt="Instagram">
+                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-instagram.png" alt="Instagram">
                     <a href="https://www.instagram.com/l.b.camargo/" target="_blank">Instagram</a>
                 </li>
-                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-facebook.png" alt="Facebook">
+                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-facebook.png" alt="Facebook">
                     <a href="https://www.facebook.com/lucas.bueno.5074644" target="_blank">Facebook</a>
                 </li>
-                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-linkedin_.png" alt="Linkedin">
+                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-linkedin_.png" alt="Linkedin">
                     <a href="https://www.linkedin.com/in/lucas-camargo-80a015190/" target="_blank">Linkedin</a>
                 </li>
-                <li><img class="icon" src="/sd-016-b-project-lessons-learned/icon/gmail_.png" alt="G-mail">
+                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/gmail_.png" alt="G-mail">
                     <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">G-mail</a>
                 </li>
             </ul>
