Adicionado nova font e configurado links externos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
     <title>Lessons Learne</title>
 </head>
 
@@ -85,22 +88,22 @@
     </main>
     <!-- Rodapé -->
     <footer id="rodape">
-        <nav id="rodape__nav">
-            <ul>
-                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-github.png" alt="Github">
-                    <a href="https://github.com/lbcamargo94" target="_blank">Github</a>
+        <nav>
+            <ul id="rodape__nav">
+                <li class="rodape__list">
+                    <a href="https://github.com/lbcamargo94" target="_blank"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-github.png" alt="Github">Github</a>
                 </li>
-                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-instagram.png" alt="Instagram">
-                    <a href="https://www.instagram.com/l.b.camargo/" target="_blank">Instagram</a>
+                <li class="rodape__list">
+                    <a href="https://www.instagram.com/l.b.camargo/" target="_blank"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-instagram.png" alt="Instagram">Instagram</a>
                 </li>
-                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-facebook.png" alt="Facebook">
-                    <a href="https://www.facebook.com/lucas.bueno.5074644" target="_blank">Facebook</a>
+                <li class="rodape__list">
+                    <a href="https://www.facebook.com/lucas.bueno.5074644" target="_blank"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-facebook.png" alt="Facebook">Facebook</a>
                 </li>
-                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-linkedin_.png" alt="Linkedin">
-                    <a href="https://www.linkedin.com/in/lucas-camargo-80a015190/" target="_blank">Linkedin</a>
+                <li class="rodape__list">
+                    <a href="https://www.linkedin.com/in/lucas-camargo-80a015190/" target="_blank"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-linkedin_.png" alt="Linkedin">Linkedin</a>
                 </li>
-                <li class="rodape__list"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/gmail_.png" alt="G-mail">
-                    <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">G-mail</a>
+                <li class="rodape__list">
+                    <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/gmail_.png" alt="G-mail">G-mail</a>
                 </li>
             </ul>
         </nav>
