Ajustes no header, footer e section menu.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lessons Learned by Nayara</h1>
+    <header class="cabecalho" id="cabecalho">
+        <h1 id="titulo">Lessons Learned</h1>
     </header>
     <main>
         <section class="menu">
@@ -61,7 +61,7 @@
             <p>Na Trybe estou aprendendo não apenas habilidades técnicas, como também estou aprendendo habilidades comportamentais.</p>
         </aside>
     </main>
-    <footer id="rodape">
+    <footer class="rodape" id="rodape">
         <p>Projeto #1</p>
     </footer>
 </body>
