--- a/index.html
+++ b/index.html
@@ -5,24 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Projeto-01-Trybe</title>
 </head>
 <body>
     <!--barra superior/ -->
-    <header>
-        <div>
-            <h1>
-                Conteudos Adquiridos. <br>
-                <!--foguete/ -->
-                <img class="imgtitolo" src="imagens/download (1).jpeg" alt="">
+    <header id="cabecalho">
+    
+        <h1 id="titulo">Topicos adquiridos já viagem.
+            <!--Botão foguete/ abri uma nova aba/  -->
+            <a href="https://app.betrybe.com/course" target="_bank">
+                <img class="imgtitolo" src="imagens/foguete.jpeg" alt="">
+            </a> 
 
-            </h1>
-        </div>    
+        </h1>
+      
     </header>
     <nav>
-        <a href="">
-            <li></li>
-        </a>
+        <h4>
+            <a class="bot-nav" href="">Quem sou eu.</a>
+            <a class="bot-nav" href="">Aprendisado.</a>
+            <a class="bot-nav" href="">Contatos.</a>
+            <a class="bot-nav" href="">cadastre-se.</a>
+        </h4>    
     </nav>
+
 </body>
 </html>
