organizado posicionamento dos artigos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <!-- Artigo -->
             <article id="artigo">
                 <section id="artigo_meu_aprendizado">
-                    <div id="artigo_box">
+                    <div class="lado-esquerdo">
                         <h2 id="artigo_titulo">Meu Aprendizado</h2>
                         <p class="text">Diferente dos demais cursos de programação a trybe me trouxe uma experiência diferente do que jamais presentiei antes. Na trybe meu aprendizado esta me rendendo um conhecimento muito melhor e mais satisfatório do que em outras
                             experiências que ja tive anteriormente.</p>
@@ -76,7 +76,7 @@
                     </div>
                 </section>
                 <aside id="notas">
-                    <div id="notas_do_artigo">
+                    <div class="lado-direito">
                         <h2 id="notas_titulo">Notas de Aprendizado</h2>
                         <p class="text">Iniciei meus estudos na trybe com o objetivo principal de desenvolver minhas habilidades tecnicas em programação web, mas pode perceber logo de inicio que na trybe estou muito além disso, contribuindo também com meu desenvolvimento
                             pessoal.
