--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             
 
                 <tr>
-                    <th>fundamentos</th> <th>Front-End</th> <th>Back-End</th> <th>Ciência da computação</th>
+                    <th>fundamentos</th> <th><a href="https://www.digitalhouse.com/br/blog/front-end-o-que-e-para-que-serve-e-como-aprender" target="_blanck">Front-End</a></th> <th>Back-End</th> <th>Ciência da computação</th>
                 </tr>
     
                 <tr>
