--- a/index.html
+++ b/index.html
@@ -24,8 +24,53 @@
   
     
   <main id="main">
-    <section>
+    <section class="img">
       <img id="minha_foto" src="nathannunes.jpeg" alt="Imagem de Nathan Nunes">
+    </section>
+
+    <section class="lado-a-lado">
+      <section>
+        <article class="lado-esquerdo">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iusto et molestias ex sunt quis vero kdfj uay poi 
+            sit. Non cupiditate suscipit fugit. Perferendis, ratione sint ipsam nemo quas aspernatur. Id, soluta. kjskka jsuuygu jsooquwjmx jsjsjsha
+          </p>
+        </article>
+      </section>
+
+
+
+      <section class="lado-direito" id="learnings">
+        <section>
+          <ol id="licoes_aprendidas"> <h2>aaa</h2>
+            <li>Bash</li>
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Funcionabilidade da Internet</li>
+            <li>Html</li>
+            <li>Css</li>
+            <li>HTML Sêmantico</li>
+            <li>Pseudoclasses</li>
+            <li>Box Model</li>
+          </ol>
+        </section>
+
+        <section>
+          <ul id="licoes_a_aprender"> <h2>aaa</h2>
+            <li>Array</li>
+            <li>Loop</li>
+            <li>Objetos</li>
+            <li>Funções</li>
+            <li>DOM</li>
+            <li>Web Storage</li>
+            <li>React</li>
+            <li>Jest</li>
+            <li>Backend</li>
+            <li>Introdução a Ciência da Computação</li>
+          </ul>
+        </section>
+      </section>
     </section>
 
     <table border="solid 1px">
@@ -65,49 +110,6 @@
         </tr>
       </tbody>
     </table>
-
-    <section id="learnings">
-      <section>
-        <ol id="licoes_aprendidas"> <h2>aaa</h2>
-          <li>Bash</li>
-          <li>Unix</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>Funcionabilidade da Internet</li>
-          <li>Html</li>
-          <li>Css</li>
-          <li>HTML Sêmantico</li>
-          <li>Pseudoclasses</li>
-          <li>Box Model</li>
-        </ol>
-      </section>
-
-      <section>
-        <ul id="licoes_a_aprender"> <h2>aaa</h2>
-          <li>Array</li>
-          <li>Loop</li>
-          <li>Objetos</li>
-          <li>Funções</li>
-          <li>DOM</li>
-          <li>Web Storage</li>
-          <li>React</li>
-          <li>Jest</li>
-          <li>Backend</li>
-          <li>Introdução a Ciência da Computação</li>
-        </ul>
-      </section>
-    </section>
-
-    <section>
-      <section>
-        <article>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iusto et molestias ex sunt quis vero kdfj uay poi 
-            sit. Non cupiditate suscipit fugit. Perferendis, ratione sint ipsam nemo quas aspernatur. Id, soluta. kjskka jsuuygu jsooquwjmx jsjsjsha
-          </p>
-        </article>
-      </section>
-    </section>
   </main>
 
   <footer id="rodape">
