--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 		<header id="cabecalho">
 			<h1 id="titulo">Lessons Learned</h1>
-			<nav><a href="namassa">Mão na massa</a>  |<a href="estudartrybe">Estudar na Trybe</a>  |<a href="https://www.betrybe.com/" target="_blank">tryber</a></nav>
+			<nav id="navegacao"><a class="link" href="#namassa">Mão na massa</a>  |<a class="link" href="#estudartrybe">Estudar na Trybe</a>  |<a class="link" href="https://www.betrybe.com/" target="_blank">Site Trybe</a></nav>
 		</header>
 		<section>
 			<div id="divfoto">
